syntax = "proto3";

package berty.errorcodes;

option go_package = "berty.tech/core/pkg/errorcodes";

import "gogoproto/gogo.proto";
//import "google/protobuf/any.proto";

enum Code {
  option (gogoproto.goproto_enum_prefix) = false;


  ErrUndefined = 0;
  OK = 1; // when wrapped error is nil
  ErrBase = 2;
  ErrUnimplemented = 3;
  ErrRandomGeneratorFailed = 4;
  ErrUUIDGeneratorFailed = 5;
  ErrSerialization = 6;
  ErrDeserialization = 7;
  ErrPanic = 8;

  ErrEnvelope = 1000;
  ErrEnvelopeUntrusted = 1001;
  ErrEnvelopeNoDeviceFound = 1002;

  ErrEntity = 2000;
  ErrEntityInput = 2001;
  ErrEntityData = 2002;
  ErrEntityExists = 2003;

  ErrNet = 3000;
  ErrNetAnotherClientConnected = 3001;
  ErrNetStream = 3002;
  ErrNetQueue = 3003;
  ErrNetDial = 3004;
  ErrNetPing = 3005;

  ErrNetP2P = 3100;
  ErrNetP2PIdentity = 3101;
  ErrNetP2PPublicKey = 3102;


  ErrEvent = 4000;
  ErrEventSender = 4001;
  ErrEventData = 4002;

  ErrValidation = 5000;
  ErrValidationInput = 5001;
  ErrValidationMyself = 5002;

  ErrPagination = 6000;

  ErrDb = 7000;
  ErrDbCreate = 7001;
  ErrDbUpdate = 7002;
  ErrDbDelete = 7003;
  ErrDbNothingFound = 7004;
  ErrDbInternalError = 7005;

  ErrCrypto = 8000;
  ErrCryptoSig = 8100;
  ErrCryptoSigMismatch = 8101;
  ErrCryptoSigFormat = 8102;
  ErrCryptoEncrypt = 8200;
  ErrCryptoDecrypt = 8300;
  ErrCryptoKey = 8400;
  ErrCryptoKeyGen = 8401;
  ErrCryptoKeyDecode = 8402;
  ErrCryptoSigchain = 8500;

  ErrAccManager = 9000;
  ErrAccManagerInitNode = 9001;
  ErrAccManagerDb = 9002;
  ErrAccManagerDbInit = 9003;
  ErrAccManagerDbDrop = 9004;
  ErrAccManagerDbMig = 9005;
  ErrAccManagerDbDir = 9006;
  ErrAccManagerNotOpened = 9007;
  ErrAccManagerCfg = 9100;
  ErrAccManagerCfgName = 9101;
  ErrAccManagerCfgPassphrase = 9102;

  ErrAccManagerCfgNet = 9104;
  ErrAccManagerCfgGrpcSrv = 9105;
  ErrAccManagerBot = 9200;
  ErrAccManagerBotInit = 9201;
  ErrAccManagerBotExited = 9202;

  ErrContactReq = 10000;
  ErrContactReqKey = 10001;
  ErrContactReqKeyMissing = 10002;
  ErrContactReqExisting = 10003;
  ErrContactReqMyself = 10004;
  ErrContactLength = 10005;
  ErrContactID = 10006;
  ErrContactAcceptExisting = 10007;
  ErrContactAccepted = 10008;
  ErrContactStatusMyself = 10009;
  ErrContactStatusIsRequested = 10010;
  ErrContactReqMe = 10011;
  ErrContactStatusReqMe = 10012;
  ErrContactAcceptedMe = 10013;
  ErrContactSeen = 10014;
  ErrContactStatusIsFriend = 10015;
  ErrContactStatusIsBlocked = 10016;
  ErrContactStatusBlockedMe = 10017;

  ErrCfg = 11000;
  ErrCfgMissing = 11001;
  ErrCfgMyself = 11002;
  ErrCfgDevices = 11003;

  ErrSenderAlias = 12000;
  ErrSenderAliasGen = 12001;
  ErrSenderAliasNoCandidates = 12002;
  ErrSenderAliasUpdateFailed = 12003;

  ErrConversation = 13000;
  ErrConversationID = 13001;
  ErrConversationTitle = 13002;
  ErrConversationTopic = 13003;
  ErrConversationInfos = 13004;
  ErrConversationKind = 13005;
  ErrConversationMembers = 13006;

  ErrConversationMemberIsOneToOne = 13201;
  ErrConversationIsGroup = 13202;
  ErrConversationIsFull = 13203;
  ErrConversationIsMember = 13204;
  ErrConversationGetMember = 13205;
  ErrConversationGetOwners = 13206;

  ErrConversationMember = 13500;
  ErrConversationMemberID = 13501;
  ErrConversationMemberStatus = 13502;
  ErrConversationMemberContact = 13503;
  ErrConversationMemberContactID = 13504;
  ErrConversationMemberConversation = 13505;
  ErrConversationMemberConversationID = 13506;

  ErrConversationMemberInvite = 13701;
  ErrConversationMemberLeave = 13702;
  ErrConversationMemberSetTitle = 13703;
  ErrConversationMemberSetTopic = 13704;
  ErrConversationMemberSetOwner = 13705;
  ErrConversationMemberBlock = 13706;
  ErrConversationMemberUnblock = 13707;
  ErrConversationMemberRead = 13708;
  ErrConversationMemberWrite = 13709;
  ErrConversationMemberSeen = 13710;

  ErrPush = 14000;
  ErrPushUnknownProvider = 14001;
  ErrPushProvider = 14002;
  ErrPushInvalidIdentifier = 14003;
  ErrPushInvalidServerConfig = 14004;
  ErrPushMissingBundleId = 14005;
  ErrPushUnknownDestination = 14006;
  ErrPushBroadcastIdentifier = 14007;
  ErrPushInvalidType = 14008;
  ErrPushBroadcast = 14009;

  ErrNotification = 15000;
  ErrNotificationMarshalFCM = 15001;
  ErrNotificationMarshalAPNS = 15002;
  ErrNotificationMarshalMQTT = 15003;
  ErrNotificationUnmarshalFCM = 15004;
  ErrNotificationUnmarshalAPNS = 15005;
  ErrNotificationUnmarshalMQTT = 15006;
  ErrNotificationReceive = 15007;

  ErrNode = 16000;
  ErrNodePushNotifSub = 16001;
  ErrNodeHandleConversationUpdate = 16701;
  ErrNodeHandleConversationInvite = 16702;

  ErrChunk = 17000;
  ErrChunkBadIndex = 17001;
  ErrChunkBadData = 17002;
  ErrChunkBadSliceID = 17003;
  ErrChunkBadSliceLength = 17004;
  ErrChunkSliceNotComplete = 17005;
  ErrChunkBadSlice = 17006;
  ErrChunkDaemonStoragePath = 17007;
  ErrChunkDaemonOpenDatabase = 17008;
  ErrChunkSlice = 17009;
  ErrChunkPublish = 17010;
  ErrChunkSave = 17011;
  ErrChunkFindSliceByID = 17012;
  ErrChunkFindAllSlices = 17013;
}

// Metadata is designed to be used as grpc status detail
message Metadata {
  // unique enum code number to identify the error
  Code code = 1;

  // extended code (see hierarchy.go)
  repeated Code extended_codes = 2;

  // used for templated errors (i18n)
  map<string, string> placeholders = 3;

  // nested/wraped errors
  Metadata parent = 4;

  // this field will be a duplicate for the top-level error and then skipped,
  // but this field is particularly useful to get debugging info when looking up parent errors.
  string message = 5;

  // caller is the first line of a stacktrace.
  string caller = 6;

  // other ideas: UUID, date, severity/log-level
}
